<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainRoot"
        android:background="@drawable/main_header_selector"
>
    <ImageButton
            android:id="@+id/burger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_white_24dp"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_alignParentTop="true"
    />

    <TextView
            android:text="@string/timeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeDesc"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_above="@+id/time"
            android:layout_marginBottom="0dp"
            android:layout_centerHorizontal="true"
    />
    <TextView
            android:text="@string/defaultTime"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:id="@+id/time"
            android:textColor="@color/colorWhite"
            android:textSize="60sp"
            android:textAlignment="center"
            android:layout_above="@+id/start_btn"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
    />

    <ImageButton
        android:id="@+id/start_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_play_arrow_white_100dp"
        android:background="@drawable/play_btn"
        android:layout_centerInParent="true"
    />
    <ImageButton
            android:id="@+id/stop_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_stop_small_30dp"
            android:background="@drawable/play_btn"
            android:layout_toEndOf="@id/start_btn"
            android:layout_alignBottom="@+id/start_btn"
            android:layout_marginStart="30dp"
    />


    <TextView
            android:text="@string/salaryDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salaryDesc"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_above="@+id/salaryText"
            android:layout_marginBottom="-40dp"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:text="@string/defaultSalary"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:id="@+id/salaryText"
            android:textColor="@color/colorWhite"
            android:textSize="60sp"
            android:textAlignment="center"
            android:layout_below="@+id/start_btn"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
    />

</RelativeLayout>