<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_header_selector"
>

    <TextView
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
    />
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:outlineAmbientShadowColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textView"
            android:foreground="@color/colorWhite"
    />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:id="@+id/salaryRow"
    >
        <TextView
                android:text="@string/salary"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/salaryText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
        />
        <EditText
                android:layout_width="205dp"
                android:layout_height="45dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/salary"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/salaryText"
                android:layout_marginStart="20dp"
                android:layout_alignParentTop="true"/>
        <TextView
                android:text="@string/perHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hourText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/salary"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
        />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/salaryRow"
            android:id="@+id/currencyRow"
    >
        <TextView
                android:text="@string/currency"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/currencyText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/currency"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/currencyText"
                android:layout_marginStart="20dp"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currencyRow"
            android:id="@+id/FirstNameRow"
    >
        <TextView
                android:text="@string/first_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/firstNameText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/firstName"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/firstNameText"
                android:layout_marginStart="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FirstNameRow"
            android:id="@+id/LastNameRow"
    >
        <TextView
                android:text="@string/last_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/lastNameText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/lastName"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/lastNameText"
                android:layout_marginStart="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LastNameRow"
            android:id="@+id/emailRow"
    >
        <TextView
                android:text="@string/email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/loginText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/loginText"
                android:layout_marginStart="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:focusable="false"
                android:layout_alignParentTop="true"
        />
    </RelativeLayout>
</RelativeLayout>